# CEI-moral-psych-release

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  data-access.md  how-to-read-results.md  legacy-baselines.md  reproducibility.md
docs/history/: README.md  family-size-rerun-monitor-2026-04-22.md  jenny-moral-psych-runbook.md  mentor-denevil-proxy-brief-2026-04-18.md  mentor-full-run-brief-2026-04-17-funded.md  mentor-full-run-brief-2026-04-17.md  mentor-option1-brief-2026-04-19.md  mentor-smoke-brief-2026-04-17.md
figures/: README.md
results/: README.md
results/inspect/logs/: 2026-03-21T16-17-48-00-00_ethics-commonsense_DtGn66Z7cQT9Hybyi5VMJY.eval  (+34 more)
results/lm-harness/: README.md  results_pretrained-Qwen_Qwen3-0.6B.json
scripts/: README.md  build_authoritative_option1_status.py  build_release_artifacts.py  check_denevil_dataset.py  denevil_proxy_formal_runs.sh  family_size_image_expansion.sh  family_size_text_expansion.sh  full_option1_runs.sh  full_option1_runs_llama_small.sh  full_option1_runs_minimax_small.sh  qwen_large_smid_recovery.sh  summarize_inspect_eval_progress.py
src/inspect/: pyproject.toml  run.py
src/inspect/evals/: denevil.py  (+7 more)
src/lm-evaluation-harness/: pyproject.toml  run.py
tests/: test_inspect_ethics.py  test_inspect_run.py  test_lm_harness_run.py  test_lm_harness_tasks.py  test_makefile_runner_resolution.py  test_moral_psych_tasks.py  test_release_artifacts.py  test_repo_hygiene.py  test_summarize_inspect_eval_progress.py
(+28 files in other folders)
