[project]
name = "cei"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "rouge-score==0.1.2",
    "sqlitedict==2.1.0",
    "word2number==1.1",
]

[tool.uv.workspace]
members = ["src/lm-evaluation-harness", "src/inspect"]

[tool.uv]
find-links = ["vendor/"]

[dependency-groups]
dev = ["pytest>=8.0", "pyyaml>=6.0", "datasets>=2.19", "inspect-ai>=0.3"]
